Updated parsing of endpoints parameters.

--- a/ua/server/server/exe/configs/server.config
+++ b/ua/server/server/exe/configs/server.config
@@ -46,27 +46,28 @@
       </depends_on>
       <parameters>
         <!-- Enable/disable debuging of module. -->
-        <!-- <debug>1</debug> -->
+        <debug>1</debug>
 
         <application>
-	        <!-- Common parameters for all endpoints  -->
-	        <application_name>Test OPC UA Server</application_name>
-	        <application_uri>opcua.treww.org</application_uri>
-	        <application_type>server</application_type>
-	        <security_mode>none</security_mode>
-	        <security_policy_uri>http://opcfoundation.org/UA/SecurityPolicy#None</security_policy_uri>
-	        <user_token_policy>
-	          <id>anonymous</id>
-	          <type>anonymous</type>
-	          <uri>http://opcfoundation.org/UA/SecurityPolicy#None</uri>
-	        </user_token_policy>
-	
-	        <!-- endpoint specific parameters. It may overwrite common parameters. -->
-	        <endpoint>
-	          <url>opc.tcp://localhost:4841</url>
-              <transport_profile_uri>http://opcfoundation.org/UA-Profile/Transport/uatcp-uasc-uabinary</transport_profile_uri>
-	        </endpoint>
+          <name>Test OPC UA Server</name>
+          <uri>opcua.treww.org</uri>
+          <type>server</type>
+
+          <endpoint>
+            <url>opc.tcp://localhost:4841</url>
+            <security_mode>none</security_mode>
+            <security_policy_uri>http://opcfoundation.org/UA/SecurityPolicy#None</security_policy_uri>
+            <transport_profile_uri>http://opcfoundation.org/UA-Profile/Transport/uatcp-uasc-uabinary</transport_profile_uri>
+
+            <user_token_policy>
+              <id>anonymous</id>
+              <type>anonymous</type>
+              <uri>http://opcfoundation.org/UA/SecurityPolicy#None</uri>
+            </user_token_policy>
+
+	  </endpoint>
         </application>
+
       </parameters>
     </module>
 
