Using full path to the libopcuaclient library in the linker options. Caused problems when hasalready installed product.

--- a/ua/server/server/endpoint_services/Makefile.in
+++ b/ua/server/server/endpoint_services/Makefile.in
@@ -323,7 +323,7 @@ libendpoints_services_addon_la_SOURCES = \
   src/endpoints_services_module.cpp
 
 libendpoints_services_addon_la_CPPFLAGS = $(INCLUDES)
-libendpoints_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) -no-undefined
+libendpoints_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
 test_endpoints_registry_SOURCES = \
   src/endpoints_parameters.cpp \
   src/endpoints_services_addon.cpp \
